--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
     </dependencies>
 
     <build>
+        <finalName>remember</finalName>
         <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
             <plugins>
                 <plugin>
