--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.jdbc.Driver
-jdbcUrl=jdbc:mysql://localhost:3306/jpt
+jdbcUrl=jdbc:mysql://localhost:3306/jsb?useUnicode=true&characterEncoding=utf8
 user=root
 password=root
