--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>remember</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>remember</name>
+    <name>CusBack</name>
     <url>http://www.example.com</url>
 
     <properties>
@@ -53,7 +53,7 @@
     </dependencies>
 
     <build>
-        <finalName>remember</finalName>
+        <finalName>CusBack</finalName>
         <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
             <plugins>
                 <plugin>
