--- a/src/main/java/org/cus/fx/util/jdbc/db.properties
+++ b/src/main/java/org/cus/fx/util/jdbc/db.properties
@@ -1,4 +1,4 @@
 driver= com.mysql.jdbc.Driver
-jdbcUrl= jdbc:mysql://192.168.1.130:3306/jsb?useUnicode=true&characterEncoding=utf8
+jdbcUrl= jdbc:mysql://192.168.1.130:3306/jpt2
 user= root
 password= root
