--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.cus.fx</groupId>
-    <artifactId>remember</artifactId>
+    <artifactId>CusBack</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <name>CusBack</name>
