--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -2,3 +2,5 @@ driver= com.mysql.jdbc.Driver
 jdbcUrl= jdbc:mysql://192.168.1.130:3306/jpt2
 user= root
 password= root
+
+feign-url= http://192.168.1.173:9002
