--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,6 +1,6 @@
 driver= com.mysql.jdbc.Driver
-jdbcUrl= jdbc:mysql://192.168.1.130:3306/jpt2
+jdbcUrl= jdbc:mysql://localhost:3306/jpt
 user= root
 password= root
 
-feign-url= http://192.168.1.173:9002
+feign-url= http://localhost:9002
